# ps2-recompiler

./: .gitmodules  CMakeLists.txt  Readme.md
include/common/: logging.h
include/decomp/Main/: ModuleInfo.h
include/ps2ctx/: asm_macros.h  pch.h  ps2_context.h
include/ps2ctx/code_units/: code_unit.h
include/ps2ctx/sce/: sif.h
include/ps2ctx/sce/disk/: sceClose.h  sceOpen.h  sceStat.h
include/ps2ctx/sce/patches/: convert_path.h
include/ps2ctx/threading/: sema_param.h  semaphor.h  thread_param.h  threading.h
include/ps2rc/: cemitter.h  code_unit.h  defines.h  ps2_registers.h  rc_config.h  rc_context.h  splits.h
include/ps2rc/elf/: elf.h
include/ps2rc/xff/: xff.h
src/common/: logging.c
src/decomp/Main/: InitDisp.c  LoaderSysGetStat.c  LoaderSysPrintf.c  PutStringS.c  ThreadRunModule.c  WarmUpCdDrive.c  _InitDisp.c
src/elf/: elf.c
src/ps2_rc/: cemitter.c  main.c  rc_config.c  rc_splits.c  xff.c
src/ps2lib/kernel/: ee_syscall.c  ps2_context.c  ps2_init.c
src/ps2lib/sce/disk/: sceClose.c  sceGetStat.c  sceOpen.c  sceRead.c
src/ps2lib/sce/patches/: convert_path.c
src/ps2lib/sce/sif/: Sif.c
src/ps2lib/threading/: semaphor.c  threading.c
